--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "eslint-config-airbnb-base": "^14.2.0"
+    "eslint-config-airbnb-base": "^14.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +58,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": ["npm run lint:fix"]
   }
 }
