--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "date-fns": "^2.14.0",
+    "node-fetch": "^2.6.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
-    "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
